<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_note">New Note</string>
    <string name="save">Save</string>
    <string name="type">Type here…</string>
    <string name="create_your_first_note">Create your first note!</string>
    <string name="aboutTxt">Say goodbye to scattered notes and hello to an organized life with our note app.</string>
    <string name="about"> Notes 1.0.0</string>
    <string name="aboutTxt2">Capture your thoughts, anytime, anywhere.</string>
    <string name="textview">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_text">Are you sure you want delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="app_info">App info</string>

</resources>