<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/note_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="?colorPrimary"
        android:contentDescription="@string/app_name"
        android:src="@drawable/note_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/about"
        android:textColor="?colorSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/note_image"
        app:layout_constraintStart_toEndOf="@id/note_image"
        app:layout_constraintTop_toTopOf="@id/note_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/aboutTxt"
        android:textColor="?colorSecondary"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/aboutTxt2"
        android:textAlignment="viewStart"
        android:textColor="?colorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <ImageButton
        android:id="@+id/gitHubImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toBottomOf="@id/twitterImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/twitterImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gitHubImage"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>